--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: build
-run-name: ${{ github.actor }} is learning GitHub Actions
+run-name: deploy-to-website
 on: [push]
 jobs:
   build-project:
@@ -10,4 +10,17 @@ jobs:
         with:
           node-version: '14'
       - run: npm install -g elm
-      - run: elm make src/Main.elm --output build.js
+      - run: elm make src/Main.elm --output dist/build.js
+      - name: Pushes to public repository
+        id: push_directory
+        uses: cpina/github-action-push-to-another-repository@ssh-deploy-key
+        env:
+          SSH_DEPLOY_KEY: ${{ secrets.WORKFLOW_DEPLOY_KEY }}
+        with:
+          source-directory: dist/
+          destination-github-username: 'ilsasdo'
+          destination-repository-name: 'ilsasdo.github.io'
+          user-email: ilsasdo@gmail.com
+          commit-message: pushed from $GITHUB_REF
+          target-branch: main
+          target-directory: projects/cavevscave
