--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
           destination-repository-name: 'ilsasdo.github.io'
           user-email: ilsasdo@gmail.com
           commit-message: pushed from $GITHUB_REF
-          target-branch: main
+          target-branch: master
           target-directory: projects/cavevscave
